@@ -221,6 +221,8 @@
                     end=(#=obj.end#)
                     type="(#=obj.type#)"
                     priority=(#=obj.priority#)
+                    bid_timing=(#=obj.bid_timing#)
+                    bid_unit=(#=obj.bid_unit#)
                     schedule_model=(#=obj.schedule_model#)
                     schedule_timing=(#=obj.schedule_timing#)
                     schedule_unit=(#=obj.schedule_unit#)
